# icu-treatment-sequencer-rl

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/agent/: agent_factory.py  base_agent.py  dqn_agent.py  ppo_agent.py
backend/api/: dependencies.py  main.py
backend/api/routers/: episodes.py  health.py  inference.py  metrics.py  training.py
backend/api/schemas/: action.py  episode.py  metrics.py  patient.py
backend/config/: hyperparams.py  settings.py
backend/env/: actions.py  icu_env.py  patient_state.py  physiology.py  reward.py  spaces.py
backend/tests/: conftest.py
backend/tests/test_agent/: test_agent_factory.py
backend/tests/test_api/: test_health.py
backend/tests/test_env/: test_gymnasium_compliance.py
backend/tests/test_training/: test_replay_buffer.py
backend/training/: callbacks.py  evaluate.py  replay_buffer.py  train.py
configs/docker/: backend.Dockerfile  frontend.Dockerfile
configs/hyperparams/: dqn_default.yaml  env_config.yaml  ppo_default.yaml
docs/: architecture.md
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: main.tsx
frontend/src/api/: client.ts
frontend/src/components/actions/: ActionCard.tsx  ActionHistory.tsx
frontend/src/components/metrics/: LossCurve.tsx  RewardCurve.tsx
frontend/src/hooks/: useTrainingMetrics.ts  useVitalsPolling.ts
frontend/src/pages/: Dashboard.tsx  EpisodeViewer.tsx  Training.tsx
frontend/src/stores/: patientStore.ts
frontend/src/types/: index.ts
(+4 files in other folders)
