[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "icu-treatment-sequencer-rl"
version = "0.1.0"
description = "Reinforcement learning agent for optimal ICU intervention sequencing"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=0.29.1",
    "stable-baselines3>=2.3.2",
    "torch>=2.3.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0.1",
    "tensorboard>=2.17.0",
    "rich>=13.7.1",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.9",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
]

[project.scripts]
train = "backend.training.train:main"
serve = "backend.api.main:serve"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
exclude = ["frontend/", "tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
addopts = "--cov=backend --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["backend"]
omit = ["backend/tests/*"]
